--- a/site/stylesheets/site.css
+++ b/site/stylesheets/site.css
@@ -1,3 +1,8 @@
+html{
+	background-image: url(../images/bamboo.gif);
+	background-size: 100% 100%;
+}
+
 body{
 	font-size: medium;
 	font-family: Verdana, Helvetica, Arial, sans-serif;
@@ -19,7 +24,7 @@ h2{
 	background-position: center;
 	background-repeat: no-repeat;
 	height: 300px;
-	line-height: 250px;
+	/*line-height: 250px;*/ /*can center one line of text but as screen adjusts and goes to two lines get MESSED UP*/
 	width: 100%;
 	float: left;
 }
@@ -27,30 +32,38 @@ h2{
 .nav{
 	background: green;
 	font-size: 100%;
-	width: 100%;
+	width: 93%;
+	margin: 2.5% 2.5% 0% 2.5%;
+	border: 5px gray solid;
 	float: left;
 }
 
 .content {
 	background: red;
-	background-image: url(../images/spa5.png);
-	background-size: 100% 100%;
-	width: 70%;
+	/*background-image: url(../images/spa5.png);
+	background-size: 100% 100%;*/  			/*This image  and sizing is only needed for the home page*/
+	width: 63%;
+	margin: 2.5% ;
+	border: 5px gray solid;
+	padding: none;
 	height: 800px;	
 	float: left;
 }
 
 .sidebar{
 	background: gray;
-	width: 30%;
+	background-image: url(../images/image01.png);
+	background-size: 100% 100%;
+	width: 23%;
+	margin: 2.5%;
+	border: 5px gray solid;
+	padding: none;
 	height: 800px;
-	line-height: 800px;
 	float: left;
 
 }
 
 .footer{
-	background: blue;
 	width: 100%;
 	float: left;
 }
